# Histoolbox

./: .gitignore  ARCHITECTURE.md  README.md  start.sh
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
backend/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  limiter.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: ocr.py
backend/app/services/: chandra_service.py
backend/tests/: conftest.py  test_chandra_service.py  test_database.py  test_ocr.py
frontend/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  BlockOverlay.tsx  DropZone.tsx  HistoryPage.tsx  MarkdownEditor.tsx  PDFPanel.tsx  SplitView.tsx  TokenGate.tsx
frontend/src/db/: index.ts
frontend/src/hooks/: useAutoSave.ts  usePolling.ts
frontend/src/lib/: apiClient.ts  blockUtils.ts  exportUtils.ts
frontend/src/pages/: HomePage.tsx  OCRHistoryPage.tsx  OCRToolboxPage.tsx  OCRUploadPage.tsx  OCRWaitingPage.tsx
frontend/src/test/: MarkdownEditor.test.tsx  db.test.ts  exportUtils.test.ts  setup.ts  useAutoSave.test.ts  usePolling.test.tsx
frontend/src/tools/: ocr.tsx  registry.ts
