[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chandra-ocr>=0.2.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "python-multipart>=0.0.26",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
